# mandelbrot-set

./: .gitignore  Makefile  README.md  mandelbrot_setnn.py  pyproject.toml  render.py  requirements.txt  vis.py
resources/: common.mk
resources/configs/: default.yaml
scripts/: render_checkpoint.py  render_mandelbrot_set.py  train_mandelbrot_setnn.py
src/mbsnn/: dataset.py  mandelbrot_setnn.py  utils.py
